finishing fsm controller module

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@ CAM/work/_lib1_2.qpg
 CAM/work/_lib1_2.qtl
 CAM/work/_vmake
 AES/Decryption/transcript
+work/_vmake
+work/_lib1_0.qtl
+work/_lib1_0.qdb
+work/_lib1_0.qpg
+work/_info
+work/_lib.qdb
